--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,14 @@
   "dependencies": {
     "@google/genai": "^1.31.0",
     "@google/generative-ai": "^0.24.1",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "groq-sdk": "^0.37.0",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
     "openai": "^6.10.0"
   }
