--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "groq-sdk": "^0.37.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
-    "openai": "^6.10.0"
+    "openai": "^6.10.0",
+    "pdf-parse": "^2.4.5"
   }
 }
